Fix 'Crashes on return from hibernation overnight (edit)'.

Enabled mysql reconnect option.

BUG:341297
FIXED-IN:4.8.1